use {Number}.valueOf instead of new Integer/Float, etc